adding connection string portion and changing constructor for storage

--- a/DMS.csproj
+++ b/DMS.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6fa559b7-f44f-4982-b5d5-9eada2ea393c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
