--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,5 +10,13 @@
   },
   "EnvironmentConfig": {
     "Environment": "Development"
+  },
+  "DataFactoryConfig": {
+    "SubscriptionId": "1bc7be44-c3d6-407e-938a-0d87d26b2b83",
+    "ResourceGroup": "bllassit-rg",
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "ClientId": "54382129-0823-457a-9ea3-b6a23125933b",
+    "DataFactoryName": "blassit",
+    "AuthenticationKey": ""
   }
 }
