move send login to deadmanswich component

--- a/DMS/DMS.csproj
+++ b/DMS/DMS.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="azure.storage.blobs" Version="12.13.1" />
+    <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
     <PackageReference Include="microsoft.aspnetcore.authentication.jwtbearer" Version="6.0.8" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.47.0" />
     <PackageReference Include="microsoft.identitymodel.tokens" Version="6.23.1" />
